--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - echo "Packaging Lambda function..."
-      - zip -r9 lambda-package.zip app.py
+      - zip -r9 lambda-package.zip app.py appspec.yml
 
 artifacts:
   files:
